--- a/index.html
+++ b/index.html
@@ -12,33 +12,8 @@
   <title>NaTours</title>
 </head>
 <body>
-<div class="row">
-  <div class="col-6">col 6 of 2</div>
-  <div class="col-6">col 2 of 2</div>
-</div>
-<div class="row">
-  <div class="col-4">col 1 of 3</div>
-  <div class="col-4">col 2 of 3</div>
-  <div class="col-4">col 3 of 3</div>
-</div>
-<div class="row">
-  <div class="col-4">col 1 of 3</div>
-  <div class="col-8">2 cols of 3 cols</div>
-</div>
-<div class="row">
-  <div class="col-3">col 1 of 4</div>
-  <div class="col-3">col 2 of 4</div>
-  <div class="col-3">col 3 of 4</div>
-  <div class="col-3">col 4 of 4</div>
-</div>
-<div class="row">
-  <div class="col-3">col 1 of 4</div>
-  <div class="col-3">col 2 of 4</div>
-  <div class="col-6">col 3 & 4 of 4</div>
-</div>
-<div class="row">
-  <div class="col-3">col 1 of 4</div>
-  <div class="col-9">col 2, 3 & 4 of 4</div>
-</div>
+  <div class="header">
+
+  </div>
 </body>
 </html>
