add logo and title

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,9 +12,20 @@
 
   <title>NaTours</title>
 </head>
+
 <body>
   <div class="header">
+    <div class="logo-box" >
+      <img src="./img/logo-white.png" class="logo" alt="logo">
+    </div>
 
+    <div class="page-title-box">
+      <h1 class="page-title">
+        <span class="page-title-main">Outdoors</span>
+        <span class="page-title-sub">is where life happens</span>
+      </h1>
+    </div>
   </div>
 </body>
+
 </html>
